Travail sur le bluetooth

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FooChat</string>
+
+    <string name="channel_foreground_service_name">Listen for messages</string>
+    <string name="channel_foreground_service_description">Listen for messages</string>
+
 </resources>
